style.css
body {
  font-size: 2em;
}

header {
  margin-bottom: 1.5em;
}

main {
  font-size: 0.75em;
}
/* *****************************************************************************

  reset user agent styles
  see: https://andy-bell.co.uk/a-modern-css-reset

***************************************************************************** */

/* Box sizing rules */
*, *::before, *::after {
  box-sizing: border-box;
}

/* Remove default margin */
body, h1, h2, h3, h4,
p, figure, blockquote, dl, dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'], ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  /* disable because of my personal header */
  /* min-height: 100vh; */
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img, picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input, button, textarea, select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }

  *, *::before, *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* *****************************************************************************

  font

***************************************************************************** */

div.meterText {
  font-size: 1.8em;
  text-align: right;
}

div.unit {
  font-size: 0.65em;
}

p, #ipArea {
  font-size: 0.65em;
  word-break: break-word;
}

p#source {
  text-align: right;
  word-break: break-word;
}

/* *****************************************************************************

  colors

***************************************************************************** */

button, input {
  color: white;
  background-color: #333;
}

#startStopBtn.running {
  background-color: #780000;
}

#progressBar {
  background-color: #808080;
}

#progress {
  background-color: #FFFFFF;
}

/* *****************************************************************************

  borders and outlines

***************************************************************************** */

button, input, select {
  border: 2px solid white;
}

button, input {
  -webkit-border-radius: 5px;
  border-radius: 5px;
}

/* *****************************************************************************

  specials

***************************************************************************** */

button, input, select,
details summary {
  cursor: pointer;
}

#startStopBtn:before {
  content: "Start Speedtest";
}

#startStopBtn.running:before {
  content: "Abort Speedtest";
}

div.meterText:empty:before {
  content: "0\.00";
}

/* *****************************************************************************

  all margins and paddings to have them together

***************************************************************************** */

main .first-in-main {
  padding-top: calc(var(--default-top-padding) - 0.8em);
}

button, input[type=button] {
  padding: 5px 10px;
}

button#startStopBtn {
  margin-left: auto;
  margin-right: auto;
  padding: 0.35em 0.7em;
}

#test {
  margin-top: 2em;
  margin-left: auto;
  margin-right: auto;
}

#progressBar {
  margin-top: 0.75em;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2em;
}

p {
  margin-block-start: 0;
}

p, #ipArea {
  margin-bottom: 1.5em
}

p#source {
  margin-left: auto;
}

/* *****************************************************************************

  positioning of elements

***************************************************************************** */

body {
  display: flex;
  flex-direction: column;
  /* disabled here because my personal default body seen on top */
  /* height: 100%; */
}

main {
  display: flex;
  flex-direction: column;
  height: 100%
}

#progress {
  position: absolute;
  height: 100%;
  width: 0%;
  top: 0;
  left: 0;
}

#progressBar {
  display: block;
  position: relative;
  width: 100%;
  height: 0.2em;
}

button#startStopBtn {
  width: fit-content;
}

.testGroupParent {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 2.5em;
  row-gap: 1em;
}

div.testGroup {
  display: inline-flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 2.5em;
  row-gap: 1em;
}

div.testArea {
  display: grid;
  position: relative;
  box-sizing: border-box;
}

div.meterText {
  width: 5.5ch
}

div.unit {
  position: relative;
  top: -1em;
}

p#source {
  width: fit-content;
}

/* *****************************************************************************

  media queries here

***************************************************************************** */

/* iPhone 13 mini portrait */
/* @media (max-width: 375px) {
} */

